Made the card numbers add up.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 </head>
 <body>
 
-<button onclick="d.hit()">hit</button>
-<button onclick="Deck.deal()">drawtest</button>
-<button onclick="player.display()">drawtest</button>
+<button id="hitButton" onclick="p.hit(d)">hit</button>
+<button id="startButton" onclick="p.startingHand(d)">deal</button>
+<!-- <button onclick="main.start()">hit</button> -->
+<!-- <button onclick="Deck.deal()">drawtest</button>
+<button onclick="player.display()">drawtest</button> -->
 
 </body>
 </html>
