game complete in console added some onscreen stuff

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <button id="hitButton" onclick="p.hit(d)">hit</button>
 <button id="startButton" onclick="p.startingHand(d)">deal</button>
+<button id="stickButton" onclick="p.stick()">stick</button>
 <!-- <button onclick="main.start()">hit</button> -->
 <!-- <button onclick="Deck.deal()">drawtest</button>
 <button onclick="player.display()">drawtest</button> -->
