fixed some bugs with the game :)

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 
-<button id="hitButton" onclick="p.hit(d)">hit</button>
-<button id="startButton" onclick="p.startingHand(d)">deal</button>
-<button id="stickButton" onclick="p.stick()">stick</button>
+<button id="hitButton" onclick="p.hit(d)">Hit</button>
+<button id="startButton" onclick="p.startingHand(d)">Deal</button>
+<button id="stickButton" onclick="p.stick()">Stand</button>
 <!-- <button onclick="main.start()">hit</button> -->
 <!-- <button onclick="Deck.deal()">drawtest</button>
 <button onclick="player.display()">drawtest</button> -->
